bug fixed: collapse/expand form (bootstrap) was jumpy so removed padding on form and works fine now

--- a/public/style.css
+++ b/public/style.css
@@ -39,8 +39,8 @@ body {
 .form-container {
     display: flex;
     flex-direction: row;
-    padding: 1.5rem 1rem;
     z-index: 1;
+    margin-top: 1rem;
 }
 
 .main-container {
